--- a/_templates/website/base.html
+++ b/_templates/website/base.html
@@ -172,8 +172,7 @@
 
 <!-- =============================================================== (ALWAYS) BODYCLASS == -->
 
-<body class="_site_domain-com _templatename-base _pagename-TBD">
-
+<body class="_site_domain-com _templatename-{% block templatename %}base{% endblock %} _pagename-TBD">
 
 <!--
 
