--- a/_templates/website/template-threeboxes.html
+++ b/_templates/website/template-threeboxes.html
@@ -17,20 +17,20 @@
 
 {% block content-base %}
 
-<div class="box box-stage column-6 last">
+<div class="box box-stage columns-6 stint">
   <div class="inner">
     <p>Box Stage</p>
   </div>
 </div>
 
-<div class="box box-row column-4 last">
+<div class="box box-row columns-4 stint">
   <div class="inner">
-    <div class="box box-stage column-2">
+    <div class="box box-stage columns-2">
       <div class="inner">
         <p>Box Stage</p>
       </div>
     </div>
-    <div class="box box-stage column-2">
+    <div class="box box-stage columns-2">
       <div class="inner">
         <p>Box Stage</p>
       </div>
