--- a/_templates/website/template-threeboxes.html
+++ b/_templates/website/template-threeboxes.html
@@ -45,6 +45,16 @@
         <p>Box Stage</p>
       </div>
     </div>
+    <div class="box box-stage">
+      <div class="inner">
+        <p>Box Stage</p>
+      </div>
+    </div>
+    <div class="box box-stage">
+      <div class="inner">
+        <p>Box Stage</p>
+      </div>
+    </div>
   </div>
 </div>
 
