--- a/_templates/website/footer-threeboxes.html
+++ b/_templates/website/footer-threeboxes.html
@@ -5,7 +5,9 @@
 <!-- @src footer-threeboxes.html @extends footer-base.html -->
 
 <footer class="{% block footer-base-class %}footer-base footer-threeboxes{% endblock %}">
+  <div class="inner">
     <p>Copyright &copy; 2011. Rights? (threeboxes)</p>
+  </div>
 </footer><!-- End .footer-base -->
 
 {% endblock %}
