--- a/_templates/website/header-threeboxes.html
+++ b/_templates/website/header-threeboxes.html
@@ -5,6 +5,7 @@
 <!-- @src footer-threeboxes.html @extends footer-base.html -->
 
 <header class="{% block header-base-class %}header-base header-threeboxes{% endblock %}">
+  <div class="inner">
     <div class="logo">Three Boxes</div>
     <nav>
         <ul>
@@ -13,6 +14,7 @@
             <li><a href="">Page</a></li>
         </ul>
     </nav>
+  </div>
 </header><!-- End .header-base -->
 
 {% endblock %}
