--- a/_templates/website/template-threeboxes.html
+++ b/_templates/website/template-threeboxes.html
@@ -19,7 +19,8 @@
 
 <div class="box box-stage">
   <div class="inner">
-    <p>Box Stage</p>
+    <h1>Box Stage</h1>
+    <p>Donec rhoncus lectus eu metus pulvinar faucibus. Curabitur quis neque a diam venenatis lobortis nec mattis odio. Cras pulvinar lacus nec massa viverra vitae consectetur elit euismod. Quisque congue mauris et arcu semper non tristique ipsum suscipit. Nulla luctus augue nec nisl venenatis rhoncus. Etiam pulvinar elit vel nisl laoreet eu tincidunt dolor fermentum. Integer facilisis ultrices justo, id adipiscing orci fermentum at. Proin mattis, leo et tempus cursus, felis sapien ultrices leo, eleifend ornare est mauris vel felis. Nulla massa tortor, viverra quis laoreet sit amet, mattis vel dolor. Suspendisse vitae tortor eu nisi tempor dignissim et id erat.</p>
   </div>
 </div>
 
@@ -27,32 +28,14 @@
   <div class="inner">
     <div class="box box-stage">
       <div class="inner">
-        <p>Box Stage</p>
+        <h1>Box Stage</h1>
+        <p>Donec rhoncus lectus eu metus pulvinar faucibus. Curabitur quis neque a diam venenatis lobortis nec mattis odio. Cras pulvinar lacus nec massa viverra vitae consectetur elit euismod. Quisque congue mauris et arcu semper non tristique ipsum suscipit. Nulla luctus augue nec nisl venenatis rhoncus. Etiam pulvinar elit vel nisl laoreet eu tincidunt dolor fermentum. Integer facilisis ultrices justo, id adipiscing orci fermentum at. Proin mattis, leo et tempus cursus, felis sapien ultrices leo, eleifend ornare est mauris vel felis. Nulla massa tortor, viverra quis laoreet sit amet, mattis vel dolor. Suspendisse vitae tortor eu nisi tempor dignissim et id erat.</p>
       </div>
     </div>
     <div class="box box-stage">
       <div class="inner">
-        <p>Box Stage</p>
-      </div>
-    </div>
-    <div class="box box-stage">
-      <div class="inner">
-        <p>Box Stage</p>
-      </div>
-    </div>
-    <div class="box box-stage">
-      <div class="inner">
-        <p>Box Stage</p>
-      </div>
-    </div>
-    <div class="box box-stage">
-      <div class="inner">
-        <p>Box Stage</p>
-      </div>
-    </div>
-    <div class="box box-stage">
-      <div class="inner">
-        <p>Box Stage</p>
+        <h1>Box Stage</h1>
+        <p>Donec rhoncus lectus eu metus pulvinar faucibus. Curabitur quis neque a diam venenatis lobortis nec mattis odio. Cras pulvinar lacus nec massa viverra vitae consectetur elit euismod. Quisque congue mauris et arcu semper non tristique ipsum suscipit. Nulla luctus augue nec nisl venenatis rhoncus. Etiam pulvinar elit vel nisl laoreet eu tincidunt dolor fermentum. Integer facilisis ultrices justo, id adipiscing orci fermentum at. Proin mattis, leo et tempus cursus, felis sapien ultrices leo, eleifend ornare est mauris vel felis. Nulla massa tortor, viverra quis laoreet sit amet, mattis vel dolor. Suspendisse vitae tortor eu nisi tempor dignissim et id erat.</p>
       </div>
     </div>
   </div>
