--- a/_templates/website/header-threeboxes.html
+++ b/_templates/website/header-threeboxes.html
@@ -6,8 +6,10 @@
 
 <header class="{% block header-base-class %}header-base header-threeboxes{% endblock %}">
   <div class="inner">
-    <div class="logo">Three Boxes</div>
-    <nav>
+    <div class="logo">
+      <a href="/">Three Boxes</a>
+    </div>
+    <nav class="nav">
         <ul>
             <li><a href="">Page</a></li>
             <li><a href="">Page</a></li>
