--- a/_templates/website/template-base.html
+++ b/_templates/website/template-base.html
@@ -110,7 +110,7 @@
 {% block mobile-viewport-optimization %}
 <meta 
   name="viewport" 
-  content="width=device-width,initial-scale=1" />
+  content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
 {% endblock %}
 
 
