--- a/_templates/website/footer-threeboxes.html
+++ b/_templates/website/footer-threeboxes.html
@@ -4,7 +4,7 @@
 
 <!-- @src footer-threeboxes.html @extends footer-base.html -->
 
-<footer class="{% block footer-base-class %}footer-base footer-threeboxes{% endblock %}">
+<footer class="{% block footer-base-class %}footer-base{% endblock %} footer-threeboxes">
   <div class="inner">
     <p>Copyright &copy; 2011. Rights? (threeboxes)</p>
   </div>
