--- a/_templates/website/header-3dscreenshots.html
+++ b/_templates/website/header-3dscreenshots.html
@@ -2,9 +2,9 @@
 
 {% block header-base %}
 
-<!-- @src footer-threeboxes.html @extends footer-base.html -->
+<!-- @src footer-3dscreenshots.html @extends footer-base.html -->
 
-<header class="{% block header-base-class %}header-base{% endblock %} header-threeboxes">
+<header class="{% block header-base-class %}header-base{% endblock %} header-3dscreenshots">
   <div class="inner">
     <div class="logo">
       <a href="/">Three Boxes</a>
