--- a/_templates/website/template-3dscreenshots.html
+++ b/_templates/website/template-3dscreenshots.html
@@ -3,20 +3,20 @@
 
 <!-- ================================================================ BLOCK: TEMPLATE-NAME == -->
 
-{% block template-name %}threeboxes{% endblock %}
+{% block template-name %}3dscreenshots{% endblock %}
 
 
 <!-- =============================================================== BLOCK: BASE-HEADER == -->
 
 {% block header-base %}
-{% include 'website/header-threeboxes.html' %}
+{% include 'website/header-3dscreenshots.html' %}
 {% endblock %}
 
 
 <!-- =============================================================== BLOCK: BASE-CONTENT == -->
 
 {% block content-base %}
-<section class="{% block content-base-class %}content-base{% endblock %} content-threeboxes">
+<section class="{% block content-base-class %}content-base{% endblock %} content-3dscreenshots">
   <div class="box box-stage">
     <div class="inner">
       <h1>Box Stage</h1>
@@ -47,5 +47,5 @@
 <!-- =============================================================== BLOCK: BASE-FOOTER == -->
 
 {% block footer-base %}
-{% include 'website/footer-threeboxes.html' %}
+{% include 'website/footer-3dscreenshots.html' %}
 {% endblock %}
